# pipeshub-ai

./: CONTRIBUTING.md  Dockerfile  Dockerfile.base  Dockerfile.integration  README.md  cspell.json
backend/: env.template
backend/python/: pyproject.toml
backend/python/app/: connectors_main.py  indexing_main.py  query_main.py
backend/python/app/agents/actions/retrieval/: retrieval.py
backend/python/app/agents/registry/: toolset_registry.py
backend/python/app/api/routes/: agent.py  chatbot.py  health.py  search.py  speech.py
backend/python/app/config/: configuration_service.py
backend/python/app/config/ai_models/providers/: __init__.py  azure.py  vertex_ai.py  whisper.py
backend/python/app/config/constants/: ai_models.py  arangodb.py  http_status_code.py  neo4j.py  service.py
backend/python/app/connectors/api/: crawling_routes.py  router.py
backend/python/app/connectors/core/: constants.py
backend/python/app/connectors/services/: base_arango_service.py  crawling_scheduler.py  event_service.py
backend/python/app/containers/: connector.py  container.py  indexing.py  query.py
backend/python/app/containers/utils/: utils.py
backend/python/app/events/: events.py  processor.py
backend/python/app/health/: health.py
backend/python/app/migrations/: all_team_migration.py
backend/python/app/models/: entities.py
backend/python/app/modules/indexing/: run.py
backend/python/app/modules/qna/: prompt_templates.py  response_prompt.py
backend/python/app/modules/retrieval/: retrieval_arango.py  retrieval_service.py
backend/python/app/modules/transformers/: arango.py  blob_storage.py  document_extraction.py  pipeline.py  sink_orchestrator.py  vectorstore.py
backend/python/app/schema/arango/: documents.py  graph.py
backend/python/app/services/: kafka_consumer.py
backend/python/app/services/graph_db/: graph_db_provider_factory.py
backend/python/app/services/messaging/: config.py  utils.py
backend/python/app/utils/: aimodels.py  attachment_utils.py  cache_helpers.py  chat_helpers.py  citations.py  fetch_full_record.py  fetch_url_tool.py  image_utils.py  llm.py  logger.py  oauth_config.py  streaming.py  tool_handlers.py  url_fetcher.py  web_search_tool.py
backend/python/app/utils/converters/: docling_doc_to_blocks.py
backend/python/code-generator/: bookstack.py
backend/python/code-generator/servicenow/: now_email_api_v1_spec.yaml  now_table_api_latest_spec.yaml  now_table_batch_api_latest_spec.yaml  servicenow.py
backend/python/tests/: conftest.py
backend/python/tests/unit/agents/: test_toolset_registry.py
backend/python/tests/unit/config/: test_etcd3_store.py
backend/python/tests/unit/events/: test_processor.py  test_processor_deep.py  test_processor_extended.py
backend/python/tests/unit/models/: test_entities.py
backend/python/tests/unit/schema/: test_node_schema_registry.py
backend/python/tests/unit/utils/: test_aimodels_speech_extended.py  test_aimodels_vertex_ai.py  test_attachment_utils.py  test_chat_helpers.py  test_chat_helpers_multimodal.py  test_citations.py  test_citations_coverage.py  test_oauth_config.py  test_streaming.py  test_streaming_coverage.py  test_streaming_extra.py  test_tool_handlers.py  test_tool_handlers_coverage.py  test_url_fetcher.py  test_web_search_tool.py
scripts/: Makefile
(+514 files in other folders)
