[tool.ruff]
line-length = 88
target-version = "py310"
src = ["."]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "F401", "PLW0603"]
ignore = [
    "E501",  # Line too long
]


[project]
name = "ai-service"
authors = [
    {name = "Abhishek", email = "abhishek@pipeshub.com"}
]
description = "AI Pipeline Service"
version = "0.1"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "aioboto3>=12.0.0",
    "aiohttp==3.13.3",
    "aiokafka==0.12.0",
    "aiolimiter==1.2.1",
    "apscheduler==3.10.4",
    "azure-ai-formrecognizer==3.3.3",
    "azure-storage-blob==12.28.0",
    "azure-storage-file-share==12.19.0",
    "beautifulsoup4==4.12.3",
    "box-sdk-gen==1.12.0",
    "Brotli==1.2.0",
    "CairoSVG==2.8.2",
    "celery==5.4.0",
    "confluent-kafka==2.8.0",
    "cachetools==6.2.4",
    "cryptography==44.0.1",
    "dependency-injector==4.44.0",
    "discord.py==2.6.3",
    "docling==2.60.0",
    "dropbox==12.0.2",
    "docx2python==3.5.0",
    "etcd3==0.12.0",
    "evernote3>=1.25.14",
    "fastapi==0.115.6",
    "fastembed==0.5.1",
    "html-to-markdown==2.3.0",
    "html2text==2025.4.15",
    "httpx==0.28.1",
    "PyGithub==2.8.1",
    "python-gitlab==6.4.0",
    "google-api-python-client==2.161.0",
    "google-auth-oauthlib==1.2.1",
    "google-cloud-storage==2.18.0",
    "Jinja2==3.1.6",
    "jsonschema==4.23.0",
    "langchain-anthropic==1.2.0",
    "langchain-aws==1.1.0",
    "langchain-cohere==0.5.0",
    "langchain-community==0.4.1",
    "langchain-experimental==0.4.0",
    "langchain-fireworks==1.1.0",
    "langchain-google-genai==3.0.0",
    "langchain-google-vertexai==2.1.2",
    "langchain-groq==1.1.0",
    "langchain-huggingface==1.1.0",
    "langchain-mistralai==0.2.12",
    "langchain-ollama==1.0.0",
    "langchain-openai==1.1.1",
    "langchain-qdrant==1.0.0",
    "langchain-voyageai==0.3.0",
    "langchain-xai==1.1.0",
    "langchain==1.1.3",
    "langgraph==1.0.4",
    "linkedin-api-client>=0.3.0",
    "mail-parser-reply==1.36",
    "markdown==3.8",
    "mmh3==4.1.0",
    "monday-api-python-sdk>=0.1.0",
    "snowflake-connector-python",
    "msgraph-sdk==1.16.0",
    "nats-py==2.1.0",
    "notion-client==2.2.1",
    "nltk==3.9.1",
    "numpy<2",
    "ocrmypdf==16.8.0",
    "openpyxl==3.1.5",
    "opik==1.9.37",
    "pagerduty>=5.0.0",
    "pandas==2.2.3",
    "pdf2image==1.17.0",
    "protobuf==3.20.3",
    "pydantic==2.12.5",
    "py-trello==0.20.1",
    "PyMuPDF==1.24.14",
    "python-arango==8.1.5",
    "python-docx==1.1.2",
    "neo4j>=5.0.0",
    "python-dotenv==1.0.1",
    "pikepdf>=8.1.0,<9.0.0",
    "python-jose==3.4.0",
    "python-multipart==0.0.22",
    "qdrant-client==1.13.1",
    "redis==5.2.1",
    "requests-toolbelt==1.0.0",
    "requests==2.32.5",
    "ruff==0.11.9",
    "sentence-transformers==3.4.1",
    "slack-sdk==3.27.0",
    "spacy<=3.7.5",
    "tenacity==8.5.0",
    "thrift>=0.16.0",
    "uuid==1.30",
    "uvicorn==0.30.6",
]

[tool.setuptools.packages.find]
exclude = ["modules"]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
module = "app.indexing_main:run"

[project.optional-dependencies]
dev = ["ruff"]
